<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:fillViewport="true"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:background="@color/white"
            >

            <EditText
                android:id="@+id/classify_fragment_editText"
                android:layout_width="wrap_content"
                android:layout_height="80px"
                android:ems="11"
                android:drawableLeft="@mipmap/icon_search"
                android:hint="@string/inputGoodsName"
                android:textSize="15sp"
                android:textColor="@color/gray"
                android:gravity="center_vertical"
                />

            <Button
                android:id="@+id/classify_fragment_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/classify_fragment_search"
                android:background="@color/white"
                android:textColor="@color/red"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20px"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            >
            <TextView
                android:layout_width="30px"
                android:layout_height="20px"
                android:background="@color/green"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/goods_type"
                android:layout_marginLeft="10px"
                />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20px"
            android:gravity="center"
            >
            <ImageView
                android:id="@+id/classify_fragment_efficacy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/efficacy"
                android:layout_weight="1"
                />
            <ImageView
                android:id="@+id/classify_fragment_eshuxing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/eshuxing"
                android:layout_weight="1"
                />
            <ImageView
                android:id="@+id/classify_fragment_skin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/skin"
                android:layout_weight="1"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20px"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            >
            <TextView
                android:layout_width="30px"
                android:layout_height="50px"
                android:background="@color/orange"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/host_type"
                android:layout_marginLeft="10px"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <Button
                style="@style/wrap"
                android:textSize="12sp"
                android:text="@string/water"
                android:background="@color/white"
                android:layout_weight="1"
                />
            <Button
                style="@style/wrap"
                android:textSize="12sp"
                android:text="@string/skin_whitening"
                android:background="@color/white"
                android:layout_weight="1"
                />
            <Button
                style="@style/wrap"
                android:textSize="12sp"
                android:text="@string/tangible_benefits"
                android:background="@color/white"
                android:layout_weight="1"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <Button
                style="@style/wrap"
                android:textSize="12sp"
                android:text="@string/mask"
                android:background="@color/white"
                android:layout_weight="1"
                />
            <Button
                style="@style/wrap"
                android:textSize="12sp"
                android:text="@string/pox"
                android:background="@color/white"
                android:layout_weight="1"
                />
            <Button
                style="@style/wrap"
                android:textSize="12sp"
                android:text="@string/face_wash"
                android:background="@color/white"
                android:layout_weight="1"
                />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20px"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            >
            <TextView
                android:layout_width="30px"
                android:layout_height="50px"
                android:background="@color/pink"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sales_goods"
                android:layout_marginLeft="10px"
                />
        </LinearLayout>


        <com.bwie.zhangtianchengyunifang.Utils.CustomGridView
            android:id="@+id/classify_fragment_GridView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:numColumns="2"
            android:stretchMode="columnWidth"
            android:verticalSpacing="20px"
            android:horizontalSpacing="20px"
            />
        <TextView
            android:id="@+id/classify_fragment_getAllGoods"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/getAllGoods"
            android:gravity="center"
            android:padding="20px"
            />

    </LinearLayout>
</ScrollView>