<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:id="@+id/user_fragment"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:background="@mipmap/user_center_bg">
                    <ImageButton
                        android:id="@+id/user_fragment_setting_btn"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="15dp"
                        android:background="@drawable/setting_selector" />

                    <ImageView
                        android:id="@+id/user_fragment_icon"
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:src="@mipmap/user_fragment_setting_"
                        android:layout_alignParentBottom="true"
                        android:layout_centerHorizontal="true" />


                </RelativeLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:background="@color/white"
                    android:layout_height="50dp">
                <ImageView
                    android:id="@+id/check_login_state"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:src="@mipmap/button"
                    android:layout_marginLeft="50dp"
                     />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:background="@color/white">

                    <RadioGroup
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="2dp"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/my_RadioButton_mine"
                            style="@style/user_group"
                            android:checked="true"
                            android:drawableTop="@mipmap/wait_pay"
                            android:text="@string/wait_pay" />

                        <RadioButton
                            style="@style/user_group"
                            android:drawableTop="@mipmap/wait_send_good"
                            android:text="@string/wait_send_good" />

                        <RadioButton
                            style="@style/user_group"
                            android:drawableTop="@mipmap/wait_receive_good"
                            android:text="@string/wait_receive_good" />

                        <RadioButton
                            style="@style/user_group"
                            android:drawableTop="@mipmap/wait_evaluate"
                            android:text="@string/wait_evaluate" />

                        <RadioButton
                            style="@style/user_group"
                            android:drawableTop="@mipmap/wait_refund"
                            android:text="@string/wait_refund" />
                    </RadioGroup>
                </LinearLayout>

                <RelativeLayout
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="6dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:padding="5dp">

                    <ImageView
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_marginLeft="20dp"
                        android:background="@mipmap/my_order_icon" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="60dp"
                        android:text="@string/my_order" />
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="5dp"
                    android:background="@color/white"></LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:padding="5dp">

                    <ImageView
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_marginLeft="20dp"
                        android:background="@mipmap/my_coupon_icon" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="60dp"
                        android:text="@string/my_coupon" />
                </RelativeLayout>


                <RelativeLayout
                    android:layout_marginTop="1dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:padding="5dp">

                    <ImageView
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_marginLeft="20dp"
                        android:background="@mipmap/my_lottery_icon" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="60dp"
                        android:text="@string/my_lottery" />
                </RelativeLayout>



                <RelativeLayout
                    android:layout_marginTop="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:padding="5dp">

                    <ImageView
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_marginLeft="20dp"
                        android:background="@mipmap/personal_center_contact_service_icon" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="60dp"
                        android:text="@string/personal_center_contact_service" />
                </RelativeLayout>



                <RelativeLayout
                    android:id="@+id/user_fragment_myCollection"
                    android:layout_marginTop="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:padding="5dp">

                    <ImageView
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_marginLeft="20dp"
                        android:background="@mipmap/my_collection_icon" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="60dp"
                        android:text="@string/my_collection_goods" />
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>


</LinearLayout>